fix bug in category

--- a/_pages/category/논문리뷰.md
+++ b/_pages/category/논문리뷰.md
@@ -1,6 +1,8 @@
 ---
+layout: categories
 title: "논문리뷰"
 permalink: /category/논문리뷰/
-layout: category
-taxonomy: 논문리뷰
+author_profile: true
+sidebar:
+  nav: "categories"
 --- 
