--- a/_pages/category/논문리뷰.md
+++ b/_pages/category/논문리뷰.md
@@ -1,8 +1,6 @@
 ---
-layout: category
 title: "논문리뷰"
 permalink: /category/논문리뷰/
-author_profile: true
-sidebar:
-  nav: "main"
+layout: category
+taxonomy: 논문리뷰
 --- 
