fix categories in post

--- a/_posts/2024-07-09-arxiv-2203-09893-summary.md
+++ b/_posts/2024-07-09-arxiv-2203-09893-summary.md
@@ -3,6 +3,7 @@ title: "경량화된 악기 무관 다성 음표 전사 및 멀티피치 추정 
 date: 2024-07-09
 categories:
   - 논문리뷰
+  - audio-speech
 ---
 
 # 논문: A LIGHTWEIGHT INSTRUMENT-AGNOSTIC MODEL FOR POLYPHONIC NOTE TRANSCRIPTION AND MULTIPITCH ESTIMATION
